[project]
name = "emostats-v2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "argon2-cffi>=25.1.0",
    "fastapi>=0.136.3",
    "passlib[bcrypt]==1.7.4",
    "python-jose[cryptography]==3.3.0",
    "sqlalchemy>=2.0.50",
    "uvicorn>=0.49.0",
]
